# gis2bem-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: INPUT_REQUIREMENTS.md
examples/: config.example.yaml  run_pipeline.py
gis2bem_workflow/: __init__.py  api.py  config.py  paths.py  server.py
gis2bem_workflow/agent/: __init__.py  external_tools.py  llm.py  react_agent.py  tools.py
gis2bem_workflow/assets/templates/: README.md
gis2bem_workflow/geometry/: polygons.py
gis2bem_workflow/gis/: vector_to_csv.py
gis2bem_workflow/idf/: baseline.py  idealload.py  mass.py
gis2bem_workflow/preprocess/: building_csv.py
gis2bem_workflow/results/: summary.py
gis2bem_workflow/run/: eplus.py
